--- a/style.css
+++ b/style.css
@@ -49,3 +49,46 @@
     color: white;
     font-size: 16px;
 }
+
+.page3b1 {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin: 0;
+}
+
+.page3r {
+    border: 1px solid black;
+    box-shadow: 0 0 5px black;
+}
+
+.page3r:nth-child(1) 
+{
+    padding: 20px 40px;
+}
+
+.zag {
+    font-weight: 900;
+}
+
+.chas {
+    opacity: 60%;
+    font-weight: 400;
+}
+
+.boats {
+    display: flex;
+    gap: 10px;
+}
+
+.boat3 img {
+    width: 100%;
+}
+
+.boats img {
+    width: 100%;
+}
+
+a {
+    color: blue;
+}
