--- a/style.css
+++ b/style.css
@@ -44,6 +44,14 @@
     color: white;
     font-size: 16px;
 }
+.lif3:after {
+    content: '2';
+    padding: 1px 10px;
+    background-color: blue;
+    color: white;
+    font-size: 16px;
+    align-self: start;
+}
 .page3b1 {
     display: flex;
     align-items: center;
@@ -70,12 +78,8 @@ a {
 .ht {
     display: flex;
     align-items: center;
+    gap: 5px;
 }
-
-#nav-mobile {
-    height: 64px;
-}
-
 .card-image {
     width: 100%;
 }
@@ -93,6 +97,49 @@ a {
     display: inline-flex;
     gap: 20px;
 }
-.mart {
+.marg {
     margin-top: 20px;
+}
+.bord {
+    border-bottom: 1px solid lightgray;
+    padding: 15px 10px 15px 15px;
+}
+
+.p6l {
+    display: flex;
+}
+.p62 {
+    display: flex;
+    padding: 20px;
+    gap: 20px;
+    align-items: center;
+}
+
+.p6l img {
+    height: 49px;
+    width: 49px;
+}
+
+.zag0 {
+    font-weight: normal;
+}
+
+.plast {
+    display: flex;
+    gap: 30px;
+    padding: 20px 20px 10px 20px;
+}
+.lol {
+    margin-bottom: 270px;
+}
+.no-margin {
+    margin: 0;
+}
+
+.ff {
+    border-left: 1px solid lightgray;
+}
+
+.grw {
+    flex-grow: 1;
 }
