--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ a {
     padding: 20px 20px 10px 20px;
 }
 .lol {
-    margin-bottom: 270px;
+    margin-bottom: 16rem;
 }
 .no-margin {
     margin: 0;
